--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
 ---
-layout: home
+layout: archive
 author_profile: true
 ---
+<h1>Скоро на канале:</h1>
+<figure class="half">
+	<img src="/assets/images/anons.jpg">
+	<img src="/assets/images/anons.jpg">
+	<!-- <img src="/assets/images/anons.jpg"> -->
+</figure>
+
+<h1>Свежие выпуски:</h1>
+
+
+{% for post in paginator.posts %}
+  {% include archive-single.html %}
+{% endfor %}
+
+{% include paginator.html %}
+
