*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 ---
 layout: single
 author_profile: true
-title:  "Сегодня в 21:00. *Михаил Крутихин*. Кремль и недра."
+title:  "29 июля в 21:00 по Москве: 
 header:
-  video:
-    id: 5MaXGrmfpgc
-    provider: youtube
+  overlay_color: "#333" 
+#  video:
+#    id: 5MaXGrmfpgc
+#    provider: youtube
 
 ---
 
