*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: single
 author_profile: true
-title:  "29 июля в 21:00 по Москве: 
+title:  "29 июля в 21:00 по Москве: **Борис Кузнецов**"
 header:
   overlay_color: "#333" 
 #  video:
