--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: single
 author_profile: true
 title:  "29 июля в 21:00 по Москве: **Борис Кузнецов**"
+excerpt: "Тема программы: Можно ли в России реформировать судебную систему?"
 header:
   overlay_color: "#333" 
 #  video:
