--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ author_profile: true
 title:  "29 июля в 21:00 по Москве: **Борис Кузнецов**"
 excerpt: "Тема программы: Можно ли в России реформировать судебную систему?"
 header:
-#overlay_color: "#333" 
+  overlay_color: "#333" 
   video:
     id: dncaZ4in0pc
     provider: youtube
