--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: single
 author_profile: true
-title:  "29 июля в 21:00 по Москве: **Борис Кузнецов**"
-excerpt: "Тема программы: Можно ли в России реформировать судебную систему?"
+title:  ""
+excerpt: ""
 header:
   # overlay_color: "#333" 
   video:
