*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ title:  ""
 excerpt: ""
 header:
   # overlay_color: "#333" 
-  video:
-    id: dncaZ4in0pc
-    provider: youtube
+  #video:
+    #id: dncaZ4in0pc
+    #provider: youtube
 
 ---
 
