*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: single
 author_profile: true
-title:  ""
-excerpt: ""
+title:  "Сегодня в 21 час по Москве: Авторская программа Дмитрия Запольского."
+excerpt: "В программе:  Рамзан Кадыров о легализации гомосексуальных браков; Павел Дуров, Телеграмм и Роскомнадзор."
 header:
-  # overlay_color: "#333" 
+  overlay_color: "#333" 
   #video:
     #id: dncaZ4in0pc
     #provider: youtube
