--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: single
 author_profile: true
-title:  "Сегодня в 21 час по Москве. *«Вскрытие покажет»* — авторская программа Дмитрия Запольского."
-excerpt: "В программе:  Рамзан Кадыров о легализации гомосексуальных браков; Павел Дуров, Телеграмм и Роскомнадзор."
+#title:  "Сегодня в 21 час по Москве. *«Вскрытие покажет»* — авторская программа Дмитрия Запольского."
+#excerpt: "В программе:  Рамзан Кадыров о легализации гомосексуальных браков; Павел Дуров, Телеграмм и Роскомнадзор."
 header:
   #overlay_color: "#333" 
-  video:
-    id: 52hbme-kUQw
-    provider: youtube
+  #video:
+    #id: 52hbme-kUQw
+    #provider: youtube
 
 ---
 
