*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: single
 author_profile: true
-title:  "Сегодня в 21 час по Москве. *«Вскрытие покажет»* — авторская программа Дмитрия Запольского."
+#title:  "Сегодня в 21 час по Москве. *«Вскрытие покажет»* — авторская программа Дмитрия Запольского."
 #excerpt: "В программе:  Рамзан Кадыров о легализации гомосексуальных браков; Павел Дуров, Телеграмм и Роскомнадзор."
 header:
   #overlay_color: "#333" 
