--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: single
 author_profile: true
-#title:  "Сегодня в 21 час по Москве. *«Вскрытие покажет»* — авторская программа Дмитрия Запольского."
+title:  "Сегодня в 20:30 (МСК) *«Вскрытие покажет»*. В 21:30 — *Жариков*.  
 #excerpt: "В программе:  Рамзан Кадыров о легализации гомосексуальных браков; Павел Дуров, Телеграмм и Роскомнадзор."
 header:
-  #overlay_color: "#333" 
+  overlay_color: "#333" 
   video:
     id: wD6nUwQcNA8
     provider: youtube
