--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: single
 author_profile: true
-title:  "Сегодня в 20:30 (МСК) *«Вскрытие покажет»*. В 21:30 — *Жариков*.  
+title:  "Сегодня в 20:30 (МСК) *«Вскрытие покажет»*. В 21:30 — *Жариков*."
 #excerpt: "В программе:  Рамзан Кадыров о легализации гомосексуальных браков; Павел Дуров, Телеграмм и Роскомнадзор."
 header:
   overlay_color: "#333" 
