--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: single
 author_profile: true
-#title:  "Сегодня в 20:30 (МСК) *«Вскрытие покажет»*. В 21:30 — *Жариков*."
+title:  "Сегодня в 21:30 (МСК) *«Вскрытие покажет»*."
 #excerpt: "В программе:  Рамзан Кадыров о легализации гомосексуальных браков; Павел Дуров, Телеграмм и Роскомнадзор."
 header:
   #overlay_color: "#333" 
-  #video:
-    #id: wD6nUwQcNA8
-    #provider: youtube
+  video:
+    id: vPD41c8li2A
+    provider: youtube
 
 ---
 
