*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ author_profile: true
 #excerpt: "В программе:  Рамзан Кадыров о легализации гомосексуальных браков; Павел Дуров, Телеграмм и Роскомнадзор."
 header:
   #overlay_color: "#333" 
-  video:
-    id: h2geVTVeYu0
-    provider: youtube
+  #video:
+    #id: h2geVTVeYu0
+    #provider: youtube
 ---
 
 {% include feature_row %}
