--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 author_profile: true
-title:  " "
+title:  "•"
 #excerpt: "В программе:  Рамзан Кадыров о легализации гомосексуальных браков; Павел Дуров, Телеграмм и Роскомнадзор."
 header:
   #overlay_image: /assets/images/splash.jpg
