--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ header:
   #overlay_image: /assets/images/splash.jpg
   #overlay_color: "#333" 
   video:
-    id: 69rbTwtfyXw
+    id: oxfFpGW31cs
     provider: youtube
 ---
 
