--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ author_profile: true
 title:  " "
 #excerpt: "В программе:  Рамзан Кадыров о легализации гомосексуальных браков; Павел Дуров, Телеграмм и Роскомнадзор."
 header:
-  overlay_image: /assets/images/splash.jpg
-  overlay_color: "#333" 
-  #video:
-    #id: oxfFpGW31cs
-    #provider: youtube
+  #overlay_image: /assets/images/splash.jpg
+  #overlay_color: "#333" 
+  video:
+    id: dMriw-siiNc
+    provider: youtube
 ---
 
 {% for post in paginator.posts %}
