--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
-layout: home
+layout: archive
 author_profile: true
 title:  " "
 #excerpt: "В программе:  Рамзан Кадыров о легализации гомосексуальных браков; Павел Дуров, Телеграмм и Роскомнадзор."
 header:
   overlay_image: /assets/images/splash.jpg
-  #overlay_color: "#333" 
+  overlay_color: "#333" 
   #video:
     #id: dMriw-siiNc
     #provider: youtube
