--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ header:
   #overlay_image: /assets/images/splash.jpg
   #overlay_color: "#333" 
   video:
-    id: jyg-X2SnmxU
+    id: kir4vW9KaT0
     provider: youtube
 ---
 
